Avoid unnecessary horizontal scrollbars (#160)
* Avoid unnecessary horizontal scrollbars

Fix long key values rendering with horizontal scrollbar;
Fix keys folder with checkbox in one line and key name in another line.

* Ellipsis replaced by horizontal scrollbar while keeping elements aligned

https://github.com/erikdubbelboer/phpRedisAdmin/pull/160#issuecomment-589968360

* Fix missing padding on the right frame in Firefox for Mac

https://github.com/erikdubbelboer/phpRedisAdmin/pull/160#issuecomment-590048242

--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,14 @@ position: absolute;
 top: 0;
 bottom: 0;
 left: 0;
+display: flex;
+flex-direction: column;
 width: 290px;
 height: 100%;
+}
+
+#header {
 padding-left: 10px;
-border-right: 1px solid #000;
 }
 
 #sidebar a, #sidebar a:visited {
@@ -23,7 +27,9 @@ text-decoration: underline;
 
 
 #keys {
+flex-grow: 1;
 width: 290px;
+margin-top: 10px;
 padding-left: 10px;
 overflow: auto;
 }
@@ -36,6 +42,7 @@ padding: 0;
 
 #keys li {
 font-weight: normal;
+white-space: nowrap;
 }
 
 #keys li.folder {
@@ -115,6 +122,7 @@ background-color: #aaa;
 cursor: col-resize;
 padding: 0;
 margin: 0;
+border-left: 1px solid #000;
 }
 
 #resize-layover {
@@ -133,11 +141,12 @@ top: 0;
 left: 305px;
 right: 0;
 bottom: 0;
-padding-left: 2em;
 }
 
 #frame iframe {
-width: 100%;
+width: calc(100% - 3em);
 height: 100%;
+margin-left: 1.5em;
+margin-right: 1.5em;
 }
 
